<resources>
    <string name="app_name">To Do List</string>
    <string name="add_to_do_button">Add to do Button</string>
    <string name="add_todo">Add ToDo</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
</resources>